Fixes year items on smaller screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -49,11 +49,17 @@
         font-size: 100%;
     }
 
+    .main_explorer
+    {
+        display: inline-block;
+    }
+
     .item_year
     {
+        float: none;
         display: block;
-        width: 80%;
-        margin: 2%;
+        width: 100%;
+        margin-bottom: 20%;
     }
 
     .side_bar
